# doc-talk

./: .gitignore  package-lock.json  package.json
backend/: .env.example  README.md  bun.lockb  drizzle.config.ts  package-lock.json  package.json
backend/db/: directories.sqlite  directories.sqlite-journal  directory.ts  index.ts  message.ts  thread.ts
backend/db/operations/: message.ts  thread.ts
backend/db/schema/: directory.ts  message.ts  thread.ts
backend/src/: app.ts  index.ts
backend/src/controllers/: auth.controller.ts  auth.ts  chat.controller.ts  chat.ts  directory.controller.ts  directory.ts  file.controller.ts  index.ts  indexDirectory.ts  rag.controller.ts  retrieveIndexedDirectory.ts  thread.controller.ts  thread.ts  user.controller.ts  user.ts
backend/src/db/: index.ts
backend/src/lib/: AI.ts  access.ts  chat.ts  chunk-and-store.ts  constants.ts  create-app.ts  create-error-schema.ts  create-message-object.ts  db.ts  default-hook.ts  env.ts  id-params.ts  isBlacklisted.ts  json-content.ts  open-api-config.ts  prompts.ts  rag.ts  stream-content.ts  upload-file-with-progress.ts  user-id-params.ts  utils.ts
backend/src/middlewares/: jwt.ts  not-found.ts  on-error.ts  pino-logger.ts
backend/src/routes/: rag.index.ts  (+2 more)
backend/types/: index.ts
client/: .prettierrc  bun.lockb  eslint.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.server.json  vite.config.ts
client/src/: App.css  App.tsx  main.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: auth.rs  lib.rs  main.rs
(+53 files in other folders)
